--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <div>
                     <h2>Coming Soon!</h2>
                     <h1>Veepay</h1>
-                    <p>Veepay is a three in one telecommunication platform that will provide Bulk sms, SME data,
-                        Recharge and subscription services to it users. <a href="./aboutus.html">Read more...</a>
+                    <p>Veepay is a three in one telecommunication platform startup that will provide Bulk sms, SME data
+                        and Recharge platforms which aims to increase lifetime value and customer engagement through our
+                        products. <a href="./aboutus.html">Read more...</a>
                     </p>
                 </div>
             </article>
@@ -68,7 +69,6 @@
                     style="width: 2rem;"></a>
         </div>
     </footer>
-
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
