--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <article>
                 <div>
                     <h2>Coming Soon!</h2>
-                    <p>Veepay is a three in one telecommunication platform startup that will provide Bulk sms, SME data,
+                    <p>Veepay is a three in one telecommunication platform that will provide Bulk sms, SME data,
                         Recharge and Subscription services to users. <a href="./aboutus.html">Learn more...</a>
                     </p>
                 </div>
