--- a/index.html
+++ b/index.html
@@ -67,22 +67,11 @@
                     style="width: 2rem;"></a>
         </div>
     </footer>
-
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/62a4ac6d7b967b11799403cc/1g59k34da';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
+    
     <script src="./JS/index.js"></script>
     <script src="./JS/fontawesome.min.js"></script>
+
+    <script src="//code.tidio.co/6i3blbargwpcvlgce8smcrj0bxo5pqwc.js" async></script>
 </body>
 
 </html>
